--- a/text/templates/text/home.html
+++ b/text/templates/text/home.html
@@ -6,11 +6,11 @@ Send messages!
 
 {% block content %}
 <div class="form-class">
-<form action="{% url 'send-view' %}" method="post" class="ui form">
+<form action="{% url 'send-view' %}" method="post" class="ui form" id="post-form">
 	{% csrf_token %}
  
     <div class="seven wide field">
-      <input type="text" placeholder="Phone Number" name="phone">
+      <input type="text" placeholder="Phone Number" name="phone" id="phone">
     </div>
      <div class="field">
       <div class="">
@@ -18,28 +18,58 @@ Send messages!
       </div>
     </div>
     <div class="seven wide field">
-      <input type="text" placeholder="Hour Ex: (0 - 23)" name="hour">
+      <input type="text" placeholder="Hour Ex: (0 - 23)" name="hour" id="hour">
     </div>
     <div class="seven wide field">
-      <input type="text" placeholder="Minute Ex: (0-59)" name="minute">
+      <input type="text" placeholder="Minute Ex: (0-59)" name="minute" id="minute">
     </div>
     <div class="seven wide field">
      <div class="field">
 	    <label>Message</label>
-	    <textarea name="message"></textarea>
+	    <textarea name="message" id="message"></textarea>
 	 </div>
 	</div>
- 
-  <button type="submit" class="ui primary button send-btn">Send message</button>
-</form>
-<div class="sending">
- <div class="ui segment">
-  <div class="ui active dimmer">
-    <div class="ui medium text loader">We'll send them message at defined time.</div>
-  </div>
-  <p>vebaernebaea</p>
-  <p>berqrenntn</p>
+ <div class="send-btn">
+  <button type="submit" class="ui primary button">Send message</button>
 </div>
+<div class="send-btn2">
+  <button class="btn btn-primary" type="button" disabled>
+  <span class="spinner-grow spinner-grow-sm" role="status" aria-hidden="true"></span>
+  Sending Message...
+</button>
+</div>
+<br>
+<div class="flex items-center bg-red-500 text-white text-sm font-bold px-4 py-3 alert-role" role="alert">
+  <svg class="fill-current w-4 h-4 mr-2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><path d="M12.432 0c1.34 0 2.01.912 2.01 1.957 0 1.305-1.164 2.512-2.679 2.512-1.269 0-2.009-.75-1.974-1.99C9.789 1.436 10.67 0 12.432 0zM8.309 20c-1.058 0-1.833-.652-1.093-3.524l1.214-5.092c.211-.814.246-1.141 0-1.141-.317 0-1.689.562-2.502 1.117l-.528-.88c2.572-2.186 5.531-3.467 6.801-3.467 1.057 0 1.233 1.273.705 3.23l-1.391 5.352c-.246.945-.141 1.271.106 1.271.317 0 1.357-.392 2.379-1.207l.6.814C12.098 19.02 9.365 20 8.309 20z"/></svg>
+  <p>Please enter all the fields.</p>
+</div>
+</form>
+
+<br>
+<div class="sending" align="center">
+   <div class="spinner-grow text-primary" role="status">
+    <span class="visually-hidden">Loading...</span>
+  </div>
+  <div class="spinner-grow text-secondary" role="status">
+    <span class="visually-hidden">Loading...</span>
+  </div>
+  <div class="spinner-grow text-success" role="status">
+    <span class="visually-hidden">Loading...</span>
+  </div>
+  <div class="spinner-grow text-danger" role="status">
+    <span class="visually-hidden">Loading...</span>
+  </div>
+  <div class="spinner-grow text-warning" role="status">
+    <span class="visually-hidden">Loading...</span>
+  </div>
+  <div class="spinner-grow text-info" role="status">
+    <span class="visually-hidden">Loading...</span>
+  </div>
+  <div class="spinner-grow text-dark" role="status">
+    <span class="visually-hidden">Loading...</span>
+  </div>
+
+  <h4>Will send message on defined time, feel free to browse other things..</h4>
   </div>
 {% endblock content %}
 
@@ -51,16 +81,56 @@ Send messages!
   $(document).ready(function(){
 
     $(".sending").hide();
+     $(".send-btn2").hide();
+      $(".alert-role").hide();
 
      $(".send-btn").click(function(){
 
-      console.log("working")
-      $(".sending").show();
+      
       
       })
 
   })
   
+  $(document).on('submit', '#post-form', function(e){
+
+    e.preventDefault()
+    console.log($('#phone').val() == '' || $('#hour').val() == '' || $('#minute').val() == '' || $('#message').val() == '')
+    console.log($('#phone').val())
+
+    if ($('#phone').val() == '' || $('#hour').val() == '' || $('#minute').val() == '' || $('#message').val() == '' )
+    {
+      $(".alert-role").show();
+    }
+
+    else{
+
+
+
+      console.log("working")
+      $(".sending").show();
+      $(".send-btn").hide();
+      $(".send-btn2").show();
+      $(".alert-role").hide();
+
+      $.ajax({
+        type: 'POST',
+        url: '/send/',
+        data:{
+          phone: $('#phone').val(),
+          hour: $('#hour').val(),
+          minute: $('#minute').val(),
+          message: $('#message').val(),
+          csrfmiddlewaretoken: $('input[name=csrfmiddlewaretoken]').val()
+
+
+        }
+
+
+      })
+    }
+  })
+
  
 
 </script>
